syntax = "proto3";

package scene_format;

message Scene {
  int32 version = 1;
  RenderOptions render_options = 2;
  repeated SceneObject scene_objects = 3;
  repeated Light lights = 4;
  repeated Camera cameras = 5;
  repeated Material materials = 6;
}

message Vector3 {
  double x = 1;
  double y = 2;
  double z = 3;
}

message Color {
  double r = 1;
  double g = 2;
  double b = 3;
}

message Transform {
  Vector3 position = 2;
  Vector3 rotation = 3;
  Vector3 scale = 4;
  int32 parent_id = 5;
}

message RenderOptions {
    int32 camera_id = 1;
    int32 width = 2;
    int32 height = 3;
}

message Cube {}
message Sphere {}
message Plane {}
message MeshedObject { string reference = 2; }
message SceneObject {
  int32 id = 1;
  Transform transform = 2;

  oneof mat {
    string material_id = 3;
    Material material = 4;
  }

  oneof mesh {
    Sphere sphere = 5;
    Cube cube = 6;
    Plane plane = 7;
    MeshedObject meshed_object = 8;
  }
}

message LightPoint {}
message LightSphere {}
message LightDirectional {}
message Light {
  int32 id = 1;
  Transform transform = 3;
  Color color = 4;
  double intensity = 5;
  oneof light {
    LightPoint point = 6;
    LightDirectional directional = 7;
    LightSphere sphere = 8;
  }
}

message PerspectiveCamera { double fov = 1; }
message OrthographicCamera {}
message Camera {
  int32 id = 1;
  Transform transform = 2;
  oneof camera {
    PerspectiveCamera perspective = 3;
    OrthographicCamera orthographic = 4;
  }
}

message Material {
  string id = 1;
  oneof material {
    SolidMaterial solid = 2;
    GlassMaterial glass = 3;
  }
}

message SolidMaterial {}

message GlassMaterial {}
